# EasySpectra

./: .gitignore  EasySpectra.command  MANIFEST.in  README.md  check_point_installer.docx  launcher.py  pyproject.toml  requirements.txt
docs/: EasySpectra_INSTALL_en.md  EasySpectra_User_Manual.md
src/easyspectra/: __init__.py  analise_espectral.py  avaliacao_alinhamento.py  exploratoria_rgb.py  funcoes_importacao.py  geo_import.py  indices_vegetacao.py  interface.py  main.py  metodos_alinhamento.py  metodos_dl.py  normalizacao.py  preprocessamento.py
src/easyspectra/models/: metodos_superglue.py
